# Tooling config only. This single-file CLI is not packaged/installed as a
# distribution, so there is intentionally no [build-system] table here.

[tool.pytest.ini_options]
minversion = "8.0"
# Tests live at the repo root alongside the single-file CLI. Collect only the
# unit tests (test_*.py); integration_test.py spawns mock HTTP servers + the
# tool as a subprocess and is run separately (see .github/workflows/tests.yml),
# so it is intentionally excluded from the coverage run here.
testpaths = ["."]
python_files = ["test_*.py"]
norecursedirs = ["lab", "scripts", ".git", "__pycache__"]
addopts = "-ra -q"

[tool.coverage.run]
branch = true
source = ["wdgwars_api_tester"]
omit = [
    "test_*.py",
    "integration_test.py",
    "mock_wdgwars.py",
]

[tool.coverage.report]
show_missing = true
# Regression floor, set just below the measured baseline (about 55 percent
# line+branch coverage from the unit tests on wdgwars_api_tester.py as of this
# commit). The build fails if coverage drops below this. Raise it as tests are
# added; it is a ratchet, not a target. The real quality enforcement is the
# SonarCloud Clean-as-You-Code gate on new code (see sonar-project.properties).
fail_under = 50
